samples/_failures_safe/1761459189_714537_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cea58137.c: In function ‘main’:
./samples/SAFE/__tmp_cea58137.c:156:5: error: expected declaration or statement at end of input
  156 |     if (scanf("%d", &choice) != 1) {
      |     ^~
./samples/SAFE/__tmp_cea58137.c:156:5: error: expected declaration or statement at end of input
